#518 - Updated the Java version to 21.